--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,6 +5,6 @@ import Container from 'react-bootstrap/Container';
 
 <footer>
     <Container>
-        <Credits client:visible />
+        &copy;
     </Container>
 </footer>
