--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import Base from '../layouts/Base.astro';
 import CopyButton from '../components/CopyButton';
 
 const name: string = "Leo Rimmer";
-const role: string = "Visual/product designer and front-end developer";
+const role: string = "Design lead, UX/UI & front-end development";
 ---
 
 <Base title={`${name} • ${role}`}>
