--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ const name: string = "Leo Rimmer";
 const role: string = "Design lead, UX/UI & front-end development";
 ---
 
-<Base title={`${name} • ${role}`}>
+<Base title={`${name} • ${role}`} name={name}>
     <Row className="g-3">
         <Col
             xs={12}
