--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,6 +5,6 @@ import ThemeSwitcher from './ThemeSwitcher';
 
 <header>
     <Container className="d-flex justify-content-end">
-        <ThemeSwitcher client:load />
+        <ThemeSwitcher client:only />
     </Container>
 </header>
