--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -6,6 +6,7 @@ import Footer from '../components/Footer.astro';
 import '../styles/styles.scss';
 
 const { title } = Astro.props;
+const { name } = Astro.props;
 ---
 
 <html lang="en">
@@ -28,6 +29,6 @@ const { title } = Astro.props;
                 <slot />
             </Container>
         </main>
-        <Footer />
+    <Footer name={name} />
     </body>
 </html>
