--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,6 @@
 ---
 import Credits from '../components/Credits';
-import Container from 'react-bootstrap/Container';
+import { Container } from 'react-bootstrap';
 const { name } = Astro.props;
 const year = new Date().getFullYear();
 ---
