--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,5 @@
 ---
-import Container from 'react-bootstrap/Container';
+import { Container } from 'react-bootstrap';
 import ThemeSwitcher from './ThemeSwitcher';
 ---
 
