--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,8 +18,7 @@ const role: string = "Design lead, UX/UI & front-end development";
         >
             <h1 class="display-5">{name}</h1>
             <p class="lead">
-                {role}.<br>
-                Currently working at
+                {role}. Currently working at
                 <Stack
                     className="d-inline-flex"
                     direction="horizontal"
