--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -17,6 +17,8 @@ const { name } = Astro.props;
         <link rel="shortcut icon" href="/favicon.ico" />
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
         <meta name="apple-mobile-web-app-title" content="MyWebSite" />
+        <meta name="theme-color" content="#FFFFFF">
+        <meta name="theme-color" content="#201e24" media="(prefers-color-scheme: dark)">
         <link rel="manifest" href="/site.webmanifest" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
