--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,10 +1,12 @@
 ---
 import { Container } from 'react-bootstrap';
+import Logo from './Logo.astro';
 import ThemeSwitcher from './ThemeSwitcher';
 ---
 
 <header>
-    <Container className="d-flex justify-content-end">
+    <Container>
+        <Logo />
         <ThemeSwitcher client:only />
     </Container>
 </header>
