--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,7 +6,7 @@ const year = new Date().getFullYear();
 ---
 
 <footer>
-    <Container className="text-center">
-        <small class="text-muted">&copy;{year} {name}</small>
+    <Container>
+        <small>&copy;{year} {name}</small>
     </Container>
 </footer>
