--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,6 +1,15 @@
 @import "bootstrap";
 @import "components";
 
+:root {
+    --#{$prefix}header-footer-padding-y: #{$spacer};
+    --#{$prefix}header-footer-min-height: #{$spacer * 2};
+    
+    @include media-breakpoint-up(md) {
+        --#{$prefix}header-footer-padding-y: #{$spacer * 2};
+    }
+}
+
 body {
     font-optical-sizing: auto;
     min-height: 100vh;
