--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,40 +5,50 @@ import Base from '../layouts/Base.astro';
 import CopyButton from '../components/CopyButton';
 
 const name: string = "Leo Rimmer";
-const role: string = "Design lead, UX/UI & front-end development";
-const heading: string = "Heading";
-const subHeading: string = "Sub heading";
+const role: string = "Senior product designer and front-end developer";
+const heading: string = role;
+const subHeading: string = "Blending thoughtful UX, clean UI and robust code to craft seamless digital experiences.";
 const current = {
-    name: "Somewhere",
+    name: "Petdirect",
     url: "https://petdirect.co.nz/"
 };
 
 ---
 
-<Base title={`${name} • ${role}`} name={name}>
-    <Row className="g-3">
+<Base
+    title={`${name} • ${role}`}
+    name={name}
+>
+    <Row>
         <Col
             xs={12}
-            md={{offset: 2, span: 8}}
-            lg={{offset: 3, span: 6}}
             className="intro"
         >
-            <h1 class="display-5">{heading}</h1>
-            <p class="lead">
-                {subHeading}
-                <Stack
-                    className="d-inline-flex"
-                    direction="horizontal"
-                    as="a"
-                    href={current.url}
-                    target="_blank"
-                    gap={1}
-                >
-                    <span>{current.name}</span>
-                    <RiExternalLinkLine />
-                </Stack>.
-            </p>
-            <CopyButton size="lg" client:load />
+            <Stack gap={4}>
+                <div>
+                    <h1 class="display-5">{heading}</h1>
+                    <p class="lead">
+                        {subHeading}
+                    </p>
+                    <p class="lead">
+                        Currently working at{' '}
+                        <Stack
+                            className="d-inline-flex"
+                            direction="horizontal"
+                            as="a"
+                            href={current.url}
+                            target="_blank"
+                            gap={1}
+                        >
+                            <span>{current.name}</span>
+                            <RiExternalLinkLine />
+                        </Stack>.
+                    </p>
+                </div>
+                <div>
+                    <CopyButton size="lg" client:load />
+                </div>
+            </Stack>
         </Col>
     </Row>
 </Base>
