--- a/src/styles/bootstrap/_custom.scss
+++ b/src/styles/bootstrap/_custom.scss
@@ -56,6 +56,11 @@ $link-color:       $primary;
 $link-decoration:  none;
 
 
+// Grid columns
+
+$grid-gutter-width:       $spacer * 3;
+
+
 // Components
 
 $border-radius:           $spacer * .5;
@@ -66,6 +71,7 @@ $box-shadow-inset:        inset 0 0 24px 0 rgba(255,255,255,0.80);
 
 $transition-timing-function:  ease-in-out; 
 $transition-time:             .25s;
+
 
 // Typography
 
@@ -88,7 +94,7 @@ $font-weight-normal:     $font-weight-regular;
 $font-weight-bolder:     $font-weight-extrabold;
 
 $display-font-weight:    $font-weight-black;
-$display-line-height:    calc(80/48);
+$display-line-height:    1.2;
 
 $lead-font-size:         $font-size-base * 1.5;
 $lead-font-weight:       $font-weight-light;
