--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,16 +1,11 @@
 header {
-	--#{$prefix}header-padding-y: #{$spacer};
-	
-	@include media-breakpoint-up(md) {
-		--#{$prefix}header-padding-y: #{$spacer * 2};
-	}
 	
 	> .container {
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
-		padding-top: var(--#{$prefix}header-padding-y);
-		padding-bottom: var(--#{$prefix}header-padding-y);
+		padding-top: var(--#{$prefix}header-footer-padding-y);
+		padding-bottom: var(--#{$prefix}header-footer-padding-y);
 	}
 	
 	.logo {
@@ -25,6 +20,11 @@ header {
 	--#{$prefix}btn-hover-bg: hsl(from var(--#{$prefix}window-border-color) h s l / var(--#{$prefix}btn-hover-bg-opacity));
 	--#{$prefix}btn-active-bg: var(--#{$prefix}btn-hover-bg);
 	padding-right: $btn-padding-x - ($spacer * .25);
+	margin-right: $spacer * -1;
+	
+	@include media-breakpoint-up(md) {
+		margin-right: 0;
+	}
 }
 
 @include color-mode(dark) {
