--- a/src/styles/components/_intro.scss
+++ b/src/styles/components/_intro.scss
@@ -1,18 +1,10 @@
 .intro {
 	
 	.display-5 {
-		margin: 0;
+		margin: 0 0 $spacer;
 	}
 	
 	.lead {
-		margin: 0 0 $spacer * 2;
-		
-		a {
-			font-weight: $font-weight-semibold;
-			
-			.remixicon {
-				color: var(--#{$prefix}border-color);
-			}
-		}
+		margin: 0 0 $spacer;
 	}
 }
