better responsive sizing

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,6 +22,10 @@ const current = {
     <Row>
         <Col
             xs={12}
+            xl={{
+                offset: 3,
+                span: 6
+            }}
             className="intro"
         >
             <Stack gap={3}>
