improve colours and toast sizing

--- a/src/styles/bootstrap/extend/_toasts.scss
+++ b/src/styles/bootstrap/extend/_toasts.scss
@@ -1,3 +1,6 @@
+$toast-max-width:                   420px;
+$toast-padding-x:                   $spacer;
+$toast-padding-y:                   $spacer;
 $toast-background-color:            $window-bg;
 $toast-border-width:                $window-border-width;
 $toast-border-color:                $window-border-color;
