--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,6 +30,12 @@ const current = {
         >
             <Stack gap={3}>
                 <div>
+                    <Stack
+                        direction="horizontal"
+                        className="name"
+                    >
+                        {name}
+                    </Stack>
                     <h1 class="display-5">{heading}</h1>
                     <p class="lead">
                         {subHeading}
