--- a/src/styles/bootstrap/_custom.scss
+++ b/src/styles/bootstrap/_custom.scss
@@ -76,6 +76,7 @@ $transition-time:             .25s;
 // Typography
 
 $font-family-sans-serif: "Inter", sans-serif;
+$font-family-mono:       "Roboto Mono", monospace;
 
 $font-size-base:         1rem;
 $font-size-lg:           $font-size-base * 1.25;
