--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -18,7 +18,8 @@ body {
     align-items: center;
     justify-content: center;
     
-    > header {
+    > header,
+    > footer {
         flex: 0 0 auto;
         width: 100%;
     }
@@ -31,11 +32,4 @@ body {
         align-items: flex-start;
         justify-content: center;
     }
-    
-    > footer {
-        width: 100%;
-        padding: $spacer 0;
-        flex: 0 0 auto;
-    }
 }
-
