adjust footer size

--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -9,5 +9,12 @@ footer {
 		justify-content: center;
 		text-align: center;
 		color: $gray-500;
+		
+		> small {
+			min-height: var(--#{$prefix}header-footer-min-height);
+			display: flex;
+			align-items: center;
+			justify-content: center;
+		}
 	}
 }
