--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,12 +1,12 @@
 ---
 import { Container } from 'react-bootstrap';
-import Logo from './Logo.astro';
+import Logo from './Logo';
 import ThemeSwitcher from './ThemeSwitcher';
 ---
 
 <header>
     <Container>
-        <Logo />
+        <Logo client:load />
         <ThemeSwitcher client:only />
     </Container>
 </header>
