--- a/src/styles/bootstrap/extend/_buttons.scss
+++ b/src/styles/bootstrap/extend/_buttons.scss
@@ -39,3 +39,23 @@ $btn-active-border-shade-amount:  0%;
 $btn-active-border-tint-amount:   0%;
 
 @import "bootstrap/scss/buttons";
+
+.btn-dropdown {
+	@extend .btn-link;
+	--#{$prefix}btn-hover-bg-opacity: .2;
+	--#{$prefix}btn-hover-bg: hsl(from var(--#{$prefix}window-border-color) h s l / var(--#{$prefix}btn-hover-bg-opacity));
+	--#{$prefix}btn-active-bg: var(--#{$prefix}btn-hover-bg);
+	padding-right: $btn-padding-x - ($spacer * .25);
+	margin-right: $spacer * -1;
+	
+	@include media-breakpoint-up(md) {
+		margin-right: 0;
+	}
+}
+
+@include color-mode(dark) {
+	
+	.btn-dropdown {
+		--#{$prefix}btn-hover-bg-opacity: .6;
+	}	
+}
