--- a/src/styles/bootstrap/extend/_transitions.scss
+++ b/src/styles/bootstrap/extend/_transitions.scss
@@ -1,1 +1,30 @@
 @import "bootstrap/scss/transitions";
+
+.fade-drop {
+	
+	&-enter {
+		opacity: 0;
+		transform: translate3d(0, $spacer * -1, 0);
+		
+		&-active,
+		&ed {
+			opacity: 1;
+			transform: translate3d(0, 0, 0);
+			transition: transform $transition-time $transition-timing-function,
+						opacity $transition-time $transition-timing-function;
+		}
+	}
+	
+	&-exit {
+		opacity: 1;
+		transform: translate3d(0, 0, 0);
+		
+		&-active,
+		&ing {
+			opacity: 0;
+			transform: translate3d(0, $spacer * -1, 0);
+			transition: transform $transition-time $transition-timing-function,
+						opacity $transition-time $transition-timing-function;
+		}
+	}
+}
